Add swagger documentation MunicipioController
